--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=lab5
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/LABB5
-spring.datasource.username=postgres
-spring.datasource.password=12345
+spring.datasource.username=yernurqq
+spring.datasource.password=yernur261004
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
